# reports

./: .flake8  .gitignore  Aptfile  Makefile  Procfile  README.md  TODO.md  eda.ipynb  h-run.sh  h-stop.sh  h.sh  knn.ipynb  labeling_interface.html  make.sh  pyproject.toml  requirements-dev.txt  requirements.txt  todo
.archive/: database.sql  mlops.ipynb  mlops_example.ipynb
.archive/app-train/: Procfile
.archive/data/input/: manuel_corrections.json
.archive/data/output/: annotations.json
.archive/mlflow/: mlops_example.ipynb
.archive/notebooks/: de_1_3_upload_ls_tasks.ipynb  ml_training.ipynb
.archive/scripts/: get_predictions.py
analysis/: pathology_count.csv
analysis/raw_data/: 1 labeled_tasks.csv  2 text_annotations.csv  3 choice_annotations.csv  5 broken_annotations.csv
app-label/: requirements.txt
app-train/: Procfile  requirements.txt
data/input/: word_corrections.json
data/input/model_config/: nlp_experiment.json
data/output/: annotations.json  clean_annotations.csv  db.json  lemma_correction.json
docs/: material-method-data.docx  results_ai_reports.pptx  template_old_paper.pptx
helm/: run.sh
models/: dataset.py  inference.py  ml_1_transformers.py  train.py
notebooks/: data_engineering.ipynb  de_1_1_ingest_raw_data.ipynb  de_1_1_prepare_ls_tasks.ipynb  de_1_2_prepare_ls_tasks.ipynb  de_1_2_translate.ipynb  de_1_3_get_ls_tasks.ipynb  de_1_3_translate.ipynb  de_1_3_upload_ls_tasks.ipynb  de_1_prepare_ls_tasks.ipynb  de_1_prepare_tasks.ipynb  de_2_get_annotations.ipynb  de_2_prepare_ls_annotations.ipynb  de_get_annotations.ipynb  de_prepare_data.ipynb  ml.ipynb  ml_1_dataloading.ipynb  ml_1_training.ipynb  ml_2_1_dataloading.ipynb  ml_2_2_training.ipynb  mlops_1_deploy.ipynb  mlops_2_deploy.ipynb  mlops_2_get_predictions.py  model_training.ipynb
notebooks/examples/: de_get_ls_annotations.ipynb  de_query_sql.ipynb  ml_training.ipynb  mlops_run_mlflow_inference_server.ipynb  mlops_run_mlflow_tracking_server.ipynb  query_sql.ipynb
scripts/: get_predictions.py  prepare_ls_tasks.py  run_mlflow_inference_server.py  run_mlflow_tracking_server.py  stop_mlflow_servers.py
src/experiment/: __init__.py  __main__.py  transformation.py
src/experiment/api/: label_studio.py  mlflow.py
src/experiment/model/: dataset.py  inference.py  pipeline.py  plotting.py  train.py
src/experiment/model/parameters/: default_model_name_params.json  mock_model_experiment_params.json
src/experiment/utils/: __init__.py  bash.py  dbutils.py  logger.py  logging.py  query.py  transformation.py
src/experiment/utils/tables/: reports_raw.py  reports_raw_table.py  upload_tasks_table.py
