[tool.poetry]
name = "experiment"
version = "0.1.0"
description = ""
authors = ["Göktuğ Aşcı <g.asci@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"


[tool.poetry.group.mlops.dependencies]
pandas = "^2.0.3"
python-dotenv = "^1.0.0"
pyarrow = "^12.0.1"
python-dateutil = "^2.8.2"
seaborn = "^0.12.2"
mlflow = "^2.5.0"
boto3 = "^1.28.9"
psycopg2-binary = "^2.9.6"
xlrd = "^2.0.1"
greenlet = "^2.0.2"
tensorflow = "^2.13.0"
transformers = "^4.31.0"
nltk = "^3.8.1"
simplemma = "^0.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
