[tool.poetry]
name = "experiment"
version = "0.1.0"
description = ""
authors = ["Göktuğ Aşcı <g.asci@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
seaborn = "^0.12.2"


[tool.poetry.group.mlops.dependencies]
pandas = "^2.0.3"
python-dotenv = "^1.0.0"
pyarrow = "^12.0.1"
mlflow = "^2.5.0"
boto3 = "^1.28.9"
psycopg2-binary = "^2.9.6"
xlrd = "^2.0.1"
greenlet = "^2.0.2"
sqlalchemy = "^2.0.20"
python-dateutil = "^2.8.2"
awscli = "^1.29.37"
setuptools = "^68.1.2"
dbt-postgres = "1.6.1"
ipywidgets = "^8.1.0"
openai = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.24.0"
flake8 = "^6.1.0"
black = "^23.7.0"
mypy = "^1.5.1"



[tool.poetry.group.scraping.dependencies]
webdriver-manager = "^4.0.0"
selenium = "^4.11.2"


[tool.poetry.group.ml.dependencies]
transformers = "^4.32.1"
nltk = "^3.8.1"
simplemma = "^0.9.1"
scikit-learn = "^1.3.0"
datasets = "^2.14.4"
evaluate = "^0.4.0"
sacrebleu = "^2.3.1"
torchvision = "^0.15.2"
sentencepiece = "^0.1.99"
sacremoses = "^0.0.53"
torch = "^2.0.1"



[tool.poetry.group.data.dependencies]
cryptography = "^41.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
