[tool.poetry]
name = "experiment"
version = "1.0.0"
description = ""
authors = ["Göktuğ Aşcı <g.asci@hotmail.com>", "Oytun Demirbilek <oytun1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.26.0"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
ipywidgets = "^8.1.1"



[tool.poetry.group.mlops.dependencies]
pandas = "^2.1.3"
numpy = "^1.26.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
python-dateutil = "^2.8.2"
awscli = "^1.30.1"
dbt-postgres = "^1.7.1"
openai = "^1.3.0"
cryptography = "^41.0.5"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
